# Algebraic_QC-LDPC

./: AG_QC_LDPC.m  Bose_class1_type2.m  Bose_classII_w3.m  Bose_classII_w5.m  Bose_classI_w4.m  Magic_Square.m  Matrix_EG.m  Matrix_field_sub_groups.m  Matrix_latin_square.m  RC_constrain.m  README.md  RS_LDPC.m  RS_LDPC2.m  fldpow.m  lattice.m
egldpc-0.4/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen-clean.sh  autogen.sh  config.h.in  configure  configure.ac
egldpc-0.4/devcpp/: check-matrix-egldpc.dev  config.h  generator-matrix-egldpc.dev
egldpc-0.4/doc/: LEEME  Makefile.am  Makefile.in
egldpc-0.4/doc/html/: Makefile.am  Makefile.in
egldpc-0.4/doc/pdf/: Makefile.am  Makefile.in
egldpc-0.4/doc/sgml/: Makefile.am  Makefile.in  capitulo1.sgml  faq.sgml  referencias.sgml  tutorial.sgml
egldpc-0.4/src/: Makefile.am  Makefile.in  checkmatrixegldpc.c  generatormatrixegldpc.c
egldpc-0.4/src/extras/: GeneraGF2n.h  Imprimindo.h  ProcuraGF2n.h  checkmatrixegldpc.h  extras.h
