## Subdirectorios que se incluiran en el paquete.tar.gz osea en las DIST
## Solo ene stos directorios buscara Makefile.am las AutoTools
SUBDIRS = src doc 


## Archivos que se incluiran en el paquete.tar.gz osea la DIST 
## Si agregas una carpeta se agregará todo su contenido.
EXTRA_DIST = 	AUTHORS ChangeLog NEWS README COPYING autogen.sh autogen-clean.sh \
		devcpp/check-matrix-egldpc.dev devcpp/generator-matrix-egldpc.dev devcpp/config.h
