## Subdirectorios que se incluiran en el paquete.tar.gz osea en las DIST
## Solo ene stos directorios buscara Makefile.am las AutoTools
SUBDIRS = html pdf sgml

## Archivos que se incluiran en el paquete.tar.gz osea la DIST 
## Si agregas una carpeta se agregará todo su contenido.
EXTRA_DIST = LEEME

## Archivos a instalar en docdir
doc_DATA = $(EXTRA_DIST)

#CLEANFILES= 

